--- a/SalesWebMvc/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-66d1e41f-2142-422c-949a-c37acc2dd571;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
