Adaptação para MySQL e primeira migration

--- a/SalesWebMvc/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-66d1e41f-2142-422c-949a-c37acc2dd571;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=developer;password=castle123;database=saleswebmvcappdb"
   }
 }
